# spectra

./: .travis.yml  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md  build.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
ionize/data/shaders/: default_2d.glsl
ionize/src/: main.rs
lib/: anim.rs  objects.rs  projection.rs  report.rs  resource.rs  transform.rs
spectra/: Cargo.toml
spectra-demoscene/: Cargo.toml
spectra-demoscene-desktop/: Cargo.toml  README.md
spectra-demoscene/src/: camera.rs  color.rs  entity.rs  lib.rs  light.rs  material.rs  model.rs  obj.rs  renderer.rs  resource.rs  shaders.rs  time.rs  transform.rs  vertex.rs
spectra-server/: Cargo.toml
spectra-server/data/shaders/: test.chdr
spectra-server/http/: index.css  index.html  index.js
spectra-server/src/: main.rs  mode.rs  msg.rs
spectra-server/src/server/: core.rs  mod.rs  tcp.rs  ws.rs
spectra/data/shaders/: default_3d.glsl
spectra/data/shaders/spectra/: constant_color_2d.glsl  default_2d.glsl  default_3d.glsl  wireframe_triangle_debug.glsl
spectra/data/shaders/spectra/compositing/: forward.glsl  texture.glsl
spectra/data/shaders/spectra/overlay/: disc.glsl  text.glsl  triangle.glsl
spectra/src/: app.rs  entity.rs  lib.rs  light.rs  logger.rs  main.rs  platform.rs  render.rs  renderer.rs  report.rs  resource.rs  text.rs  time.rs
spectra/src/anim/: edit.rs  mod.rs  spline.rs
spectra/src/app/: demo.rs  runner.rs
spectra/src/app/runner/: debug.rs
spectra/src/render/: framebuffer.rs  input.rs  mod.rs  shader.rs  texture.rs  types.rs
spectra/src/render/shader/: module.rs  program.rs
spectra/src/render/shader/cheddar/: mod.rs  parser.rs  syntax.rs
spectra/src/resource/: context.rs  error.rs  key.rs
spectra/src/scene/: mod.rs  model.rs  transform.rs
spectra/src/scene/camera/: base.rs  mod.rs
spectra/src/sys/: mod.rs
spectra/src/sys/res/: helpers.rs
src/: aabb.rs  anim.rs  app.rs  audio.rs  behavior.rs  bootstrap.rs  cache.rs  camera.rs  color.rs  compositing.rs  compositor.rs  crate_macros.rs  device.rs  edit.rs  effect.rs  entity.rs  event.rs  gui.rs  id.rs  lib.rs  light.rs  linear.rs  logger.rs  model.rs  object.rs  objects.rs  overlay.rs  pipeline.rs  projection.rs  pulse.rs  render.rs  renderer.rs  report.rs  resource.rs  scale.rs  scene.rs  shader.rs  spline.rs  ssl.rs  tessellation.rs  (+5 more)
src/anim/: edit.rs  spline.rs
src/app/: demo.rs  runner.rs
src/app/runner/: debug.rs
src/extra/: cube.rs  curve.rs  freefly.rs  mod.rs  plane.rs
src/extra/compositors/: forward.rs
src/extra/renderers/: simple.rs
src/extra/shaders/: default.rs  mod.rs
src/gui/: mod.rs
src/render/: block.rs  color.rs  fullscreen.rs  input.rs  mod.rs  output.rs  projection.rs  texture.rs  type_channel.rs  types.rs  viewport_renderer.rs
src/render/shader/: mod.rs  module.rs  program.rs
src/render/shader/cheddar/: parser.rs  syntax.rs
src/render/shader/lang/: mod.rs  parser.rs  syntax.rs
src/resource/: context.rs
src/scene/: light.rs  model.rs  scale.rs  transform.rs
src/scene/camera/: base.rs  freefly.rs
src/ssl/: mod.rs  parser.rs  syntax.rs
src/sys/: app.rs  bootstrap.rs  event.rs  ignite.rs  mod.rs  plugin.rs  resource.rs  time.rs
src/sys/res/: encoding.rs  helpers.rs  mod.rs
tests/: lib.rs
zeta/: Cargo.toml
zeta/src/: app_demo.rs  main.rs  shadertoy.rs
