[package]
name = "spectra"
version = "0.12.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Demoscene framework"
keywords = ["demoscene", "animation", "graphics"]

homepage = "https://github.com/phaazon/spectra"
repository = "https://github.com/phaazon/spectra"
documentation = "https://docs.rs/spectra"

build = "build.rs"

[dependencies]
alto = "3.0"
any-cache = "0.2"
cgmath = "0.15"
chrono = "0.4"
clap = "2.27"
luminance = "0.26"
luminance-glfw = "0.5"
luminance-windowing = "0.2"
image = "0.17"
glsl = "0.7.0"
num-traits = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
vorbis = "0.1"
wavefront_obj = "5.1"
warmy = "0.7"

[dependencies.nom]
version = "3.2"
features = ["verbose-errors"]

[dev-dependencies]
rand = "0.3" # for unit tests
