[package]
name = "spectra"
version = "0.13.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
license = "BSD-3-Clause"
description = "Demoscene framework"
keywords = ["demoscene", "animation", "graphics"]
categories = ["game-engines", "multimedia", "rendering", "simulation"]
homepage = "https://github.com/phaazon/spectra"
repository = "https://github.com/phaazon/spectra"
documentation = "https://docs.rs/spectra"

edition = "2018"

[dependencies]
#alto = "3.0"
#cgmath = "0.16"
cheddar = "0.1"
#chrono = "0.4"
clap = "2.27"
glsl = "0.9"
glsl-quasiquote = "0.2"
luminance = "0.30"
luminance-glfw = "0.5"
#luminance-windowing = "0.2"
#image = "0.19"
#num-traits = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
#vorbis = "0.1"
#wavefront_obj = "5.1"
warmy = "0.10"

[dependencies.splines]
version = "0.2"
features = ["serialization"]

[dev-dependencies]
rand = "0.5"

[patch.crates-io]
glsl = { path = "/home/phaazon/dev/glsl" }
glsl-quasiquote = { path = "/home/phaazon/dev/glsl-quasiquote" }
