[package]
name = "spectra-demoscene"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "TODO"
keywords = ["TODO"]
categories = ["TODO"]
homepage = "https://github.com/phaazon/spectra"
repository = "https://github.com/phaazon/spectra"
documentation = "https://docs.rs/spectra"
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
cgmath = { version = "0.18", features = ["serde"] }
itertools = "0.10.1"
log = "0.4.14"
luminance = "0.44"
luminance-front = "0.4"
serde = { version = "1", features = ["derive"] }
shades = "0.3.6"
spectra = { version = "0.14", path = "../spectra" }
splines = { version = "4", features = ["cgmath", "serde"] }
wavefront_obj = "10"
